August_30/August_30/src/objects/Role__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Resource</label>
        <referenceTo>Assigned_Resource__c</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_Requisitions__c</fullName>
        <description>Total Resources in the hiring stage</description>
        <label>Open Requisitions</label>
        <summaryFilterItems>
            <field>Recruiting_Requisition__c.Hiring_Stage__c</field>
            <operation>contains</operation>
            <value>Level 1, Level 2, Level 3, Offered</value>
        </summaryFilterItems>
        <summaryForeignKey>Recruiting_Requisition__c.Role__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase</label>
        <referenceTo>Project_Phase__c</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project Name</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recruiting_Requisition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiting Requisition</label>
        <referenceTo>Recruiting_Requisition__c</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Req_Offers_Accepted__c</fullName>
        <description>Total count of Resources who have accepted the offer</description>
        <label>Req Offers Accepted</label>
        <summaryFilterItems>
            <field>Recruiting_Requisition__c.Hiring_Stage__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>Recruiting_Requisition__c.Role__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Req_Offers_Joined__c</fullName>
        <description>Total Resources that have joined TEK</description>
        <label>Req Offers Joined</label>
        <summaryFilterItems>
            <field>Recruiting_Requisition__c.Hiring_Stage__c</field>
            <operation>equals</operation>
            <value>Joined</value>
        </summaryFilterItems>
        <summaryForeignKey>Recruiting_Requisition__c.Role__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Resource_Exceeded_Note__c</fullName>
        <formula>IF((Total_Assigned_Resources__c &gt; 1), "ALERT: More than one resource is assigned to this role.",'')</formula>
        <label>Resource Exceeded Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Allocation__c</fullName>
        <label>Role Allocation %</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <label>Role Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role_Duration_Weeks__c</fullName>
        <label>Role Duration (Weeks)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role_End_Date__c</fullName>
        <formula>(Role_Start_Date__c)  +  30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_Location__c</fullName>
        <label>Role Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Specified</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Bangalore w/Travel to US</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Hyderabad w/ Travel to US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Start_Date__c</fullName>
        <label>Role Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_on_Project__c</fullName>
        <label>Role on Project</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>Blue Print Lead</fullName>
                </value>
                <value>
                    <fullName>Customer Success Leader</fullName>
                </value>
                <value>
                    <fullName>Delivery Manager</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Developer HTML5 Sr</fullName>
                </value>
                <value>
                    <fullName>Developer Java WS/SF QA/SF Dev</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Practice Architect</fullName>
                </value>
                <value>
                    <fullName>Process Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Project Coordinator</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Scrum Master</fullName>
                </value>
                <value>
                    <fullName>Scrum Master Jr</fullName>
                </value>
                <value>
                    <fullName>SF Admin</fullName>
                </value>
                <value>
                    <fullName>SF App Architect</fullName>
                </value>
                <value>
                    <fullName>SF App Builder</fullName>
                </value>
                <value>
                    <fullName>SF Associate Admin</fullName>
                </value>
                <value>
                    <fullName>SF Associate Developer</fullName>
                </value>
                <value>
                    <fullName>SF Business Analyst</fullName>
                </value>
                <value>
                    <fullName>SF Consultant</fullName>
                </value>
                <value>
                    <fullName>SF Designer</fullName>
                </value>
                <value>
                    <fullName>SF Developer</fullName>
                </value>
                <value>
                    <fullName>SF Developer Lead</fullName>
                </value>
                <value>
                    <fullName>SF Developer Lightning Specialist</fullName>
                </value>
                <value>
                    <fullName>SF Integration Architect</fullName>
                </value>
                <value>
                    <fullName>SF PM</fullName>
                </value>
                <value>
                    <fullName>SF Project Coordinator</fullName>
                </value>
                <value>
                    <fullName>SF Quality Analyst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Assigned_Resources__c</fullName>
        <label>Total Assigned Resources</label>
        <summaryForeignKey>Assigned_Resource__c.Role__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_of_Position__c</fullName>
        <label>Total # of Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Role</label>
    <nameField>
        <displayFormat>Role-{0000}</displayFormat>
        <label>Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Role_on_Project__c</columns>
        <columns>Role_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Role__c.Project_Role</value>
        </filters>
        <label>All Billable Project Roles</label>
    </listViews>
    <listViews>
        <fullName>All_Non_billable_Practice_Roles</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Role_Location__c</columns>
        <columns>Role_End_Date__c</columns>
        <columns>Total_of_Position__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Role__c.Practice_Role</value>
        </filters>
        <label>All Non-billable Practice Roles</label>
    </listViews>
    <recordTypes>
        <fullName>Practice_Role</fullName>
        <active>true</active>
        <description>Role for TEK Salesforce Practice hiring</description>
        <label>Practice Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Role</fullName>
        <active>true</active>
        <description>Role for customer billable projects</description>
        <label>Project Role</label>
    </recordTypes>
</CustomObject>